--- a/src/app/taskmodule/project-list/add-project/add-project.component.scss
+++ b/src/app/taskmodule/project-list/add-project/add-project.component.scss
@@ -24,7 +24,7 @@
   margin: 0 auto;
   padding: 16px;
   height: max-content;
-  max-height: 80vh;
+  max-height: 85vh;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -32,8 +32,9 @@
 
 .project-form {
   height: max-content;
-  max-height: 70vh;
-  overflow-y: auto;
+  max-height: 85vh;
+  // overflow-y: auto;
+  overflow-y: visible;
 }
 
 .form-container {
