--- a/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
+++ b/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
@@ -48,7 +48,7 @@
                 </mat-form-field>
 
                 <!-- Assigned To -->
-                <div *ngIf="subTaskForm.get('assignedto')">
+                <div *ngIf="subTaskForm.get('assignedto')" style="width: calc(100% - 24px);">
                     <ng-multiselect-dropdown [placeholder]="'Assigned To *'" [settings]="dropdownSettings"
                         [data]="employeeData" [formControl]="assignedToControl">
                     </ng-multiselect-dropdown>
