--- a/src/app/taskmodule/project-list/project-list.component.html
+++ b/src/app/taskmodule/project-list/project-list.component.html
@@ -24,7 +24,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="projectId">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by projectId" class="nowrap">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by projectId" class="nowrap">
                         Project ID </th>
                     <td mat-cell *matCellDef="let element" (click)="openTasks(element.projectid, element.pid)">
                         <a style="cursor: pointer; color:#0000ee; font-weight: 600;">
@@ -34,14 +34,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="projectName">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by projectName" class="nowrap"> Project Name </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by projectName" class="nowrap"> Project Name </th>
                     <td mat-cell *matCellDef="let element">
                         {{ element.projectname | titlecase }} 
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by description" class="nowrap"> Description </th>
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by description" class="nowrap"> Description </th>
                     <td mat-cell *matCellDef="let element">
                         <div class="description-text truncate-multiline" matTooltip="{{ element.projectdescription }}" matTooltipPosition="above" matTooltipClass="custom-tooltip">
                             {{ element.projectdescription }}
@@ -50,7 +50,7 @@
                 </ng-container>                
 
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by status" class="nowrap"> Status </th>
+                    <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by status" class="nowrap"> Status </th>
                     <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
                 </ng-container>
 
