--- a/src/app/taskmodule/task-list/task-list.component.scss
+++ b/src/app/taskmodule/task-list/task-list.component.scss
@@ -218,6 +218,14 @@
   color: #fff;
 }
 
+.past-due {
+  background-color: red;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
 .actions-container {
   display: flex;
   align-items: center;
