task management disabling past and sunday dates. ticketid addition to the task

--- a/src/app/taskmodule/project-list/project-list.component.scss
+++ b/src/app/taskmodule/project-list/project-list.component.scss
@@ -53,6 +53,7 @@ tbody {
 .mat-column-description,
 .mat-column-targetDate,
 .mat-column-status,
+.mat-column-createdDate,
 .mat-column-update,
 .mat-column-Action {
   border-right: 1px solid lightgray;
