--- a/src/app/taskmodule/project-list/project-list.component.html
+++ b/src/app/taskmodule/project-list/project-list.component.html
@@ -47,7 +47,12 @@
                             {{ element.projectdescription }}
                         </div>
                     </td>
-                </ng-container>                
+                </ng-container>
+                
+                <ng-container matColumnDef="createdDate">
+                    <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by createdDate" class="nowrap"> Created Date </th>
+                    <td mat-cell *matCellDef="let element"> {{ element.createddate | date:'MM-dd-yyyy' }} </td>
+                </ng-container>
 
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by status" class="nowrap"> Status </th>
