--- a/src/app/taskmodule/task-list/add-task/add-task.component.html
+++ b/src/app/taskmodule/task-list/add-task/add-task.component.html
@@ -39,7 +39,7 @@
             <!-- Target Date -->
             <mat-form-field appearance="outline">
                 <mat-label>Target Date</mat-label>
-                <input matInput [matDatepicker]="datepicker" formControlName="targetdate" placeholder="DD-MM-YYYY">
+                <input matInput [matDatepicker]="datepicker" [matDatepickerFilter]="myFilter" formControlName="targetdate" placeholder="DD-MM-YYYY">
                 <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
                 <mat-datepicker #datepicker></mat-datepicker>
                 <mat-error *ngIf="taskForm.get('targetdate')!.hasError('required')"> Target Date is
