--- a/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
+++ b/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
@@ -10,58 +10,48 @@
     <form [formGroup]="subTaskForm" class="sub-task-form">
         <section class="form-container">
 
-                <!-- Client -->
-                <mat-form-field appearance="outline" class="first-field">
-                    <mat-label>Sub Task Name</mat-label>
-                    <input matInput formControlName="subTaskName" maxlength="120">
-                    <mat-error *ngIf="subTaskForm.get('subTaskName')!.hasError('required')"> Sub Task Name is
-                        required</mat-error>
-                </mat-form-field>
+            <!-- Sub Task Name -->
+            <mat-form-field appearance="outline" class="first-field">
+                <mat-label>Sub Task Name</mat-label>
+                <input matInput formControlName="subTaskName" maxlength="120">
+                <mat-error *ngIf="subTaskForm.get('subTaskName')!.hasError('required')"> Sub Task Name is
+                    required</mat-error>
+            </mat-form-field>
 
-                <!-- Job Description -->
-                <mat-form-field class="description-field" appearance="outline">
-                    <mat-label>Sub Task Description</mat-label>
-                    <textarea formControlName="subTaskDescription" matInput rows="4" maxlength="10000"></textarea>
-                    <mat-error *ngIf="subTaskForm.get('subTaskDescription')!.hasError('required')"> Sub Task Description is
-                        required</mat-error>
-                </mat-form-field>
+            <!-- Sub Task Description -->
+            <mat-form-field class="description-field" appearance="outline">
+                <mat-label>Sub Task Description</mat-label>
+                <textarea formControlName="subTaskDescription" matInput rows="4" maxlength="10000"></textarea>
+                <mat-error *ngIf="subTaskForm.get('subTaskDescription')!.hasError('required')"> Sub Task Description is
+                    required</mat-error>
+            </mat-form-field>
 
-                <!-- Department -->
-                <!-- <mat-form-field appearance="outline" class="category-field">
-                    <mat-label>Select Department</mat-label>
-                    <mat-select name="department" formControlName="department" >
-                      <mat-option *ngFor="let option of deptOptions" [value]="option.name">
-                        {{ option.name }}
-                      </mat-option>
-                    </mat-select>
-                      <mat-error *ngIf="subTaskForm.get('department')!.hasError('required')"> Department is required</mat-error>
-                </mat-form-field> -->
-            
-                <!-- Target Date -->
-                <mat-form-field appearance="outline">
-                    <mat-label>Target Date</mat-label>
-                    <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="datepicker" formControlName="targetDate" placeholder="DD-MM-YYYY">
-                    <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
-                    <mat-datepicker #datepicker></mat-datepicker>
-                    <mat-error *ngIf="subTaskForm.get('targetDate')!.hasError('required')"> Target Date is
-                        required</mat-error>
-                </mat-form-field>
+            <!-- Target Date -->
+            <mat-form-field appearance="outline">
+                <mat-label>Target Date</mat-label>
+                <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="datepicker"
+                    formControlName="targetDate" placeholder="DD-MM-YYYY">
+                <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+                <mat-datepicker #datepicker></mat-datepicker>
+                <mat-error *ngIf="subTaskForm.get('targetDate')!.hasError('required')"> Target Date is
+                    required</mat-error>
+            </mat-form-field>
 
-                <!-- Assigned To -->
-                <div *ngIf="subTaskForm.get('assignedto')" style="width: calc(100% - 24px);">
-                    <ng-multiselect-dropdown [placeholder]="'Assigned To *'" [settings]="dropdownSettings"
-                        [data]="employeeData" [formControl]="assignedToControl">
-                    </ng-multiselect-dropdown>
-                    <mat-error
-                        *ngIf="subTaskForm.get('assignedto')!.hasError('required') && subTaskForm.get('assignedto')!.touched">
-                        Assigned To is required
-                    </mat-error>
-                </div>
-
+            <!-- Assigned To -->
+            <div *ngIf="subTaskForm.get('assignedto')" style="width: calc(100% - 24px);">
+                <ng-multiselect-dropdown [placeholder]="'Assigned To *'" [settings]="dropdownSettings"
+                    [data]="employeeData" [formControl]="assignedToControl">
+                </ng-multiselect-dropdown>
+                <mat-error
+                    *ngIf="subTaskForm.get('assignedto')!.hasError('required') && subTaskForm.get('assignedto')!.touched">
+                    Assigned To is required
+                </mat-error>
+            </div>
         </section>
     </form>
-    <div class="form-action-buttons">
-        <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
-    </div>
 </mat-card>
+
+<div class="form-action-buttons">
+    <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
+</div>
