--- a/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.scss
+++ b/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.scss
@@ -28,12 +28,12 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  box-shadow: none;
 }
 
 .sub-task-form {
   height: max-content;
   max-height: 85vh;
-  // overflow-y: auto;
   overflow-y: visible;
 }
 
@@ -85,9 +85,12 @@ mat-error {
 }
 
 .form-action-buttons {
-  margin-top: 8px;
-  display: flex !important;
+  display: flex;
   justify-content: flex-end;
+  padding: 8px;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
   gap: 10px;
 }
 
