--- a/src/app/taskmodule/task-list/add-task/add-task.component.html
+++ b/src/app/taskmodule/task-list/add-task/add-task.component.html
@@ -25,21 +25,11 @@
                     required</mat-error>
             </mat-form-field>
 
-            <!-- Department -->
-            <!-- <mat-form-field appearance="outline" class="category-field">
-                    <mat-label>Select Department</mat-label>
-                    <mat-select name="department" formControlName="department" >
-                      <mat-option *ngFor="let option of deptOptions" [value]="option.name">
-                        {{ option.name }}
-                      </mat-option>
-                    </mat-select>
-                      <mat-error *ngIf="taskForm.get('department')!.hasError('required')"> Department is required</mat-error>
-                </mat-form-field> -->
-
             <!-- Target Date -->
             <mat-form-field appearance="outline">
                 <mat-label>Target Date</mat-label>
-                <input matInput [matDatepicker]="datepicker" [matDatepickerFilter]="myFilter" formControlName="targetdate" placeholder="DD-MM-YYYY">
+                <input matInput [matDatepicker]="datepicker" [matDatepickerFilter]="myFilter"
+                    formControlName="targetdate" placeholder="DD-MM-YYYY">
                 <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
                 <mat-datepicker #datepicker></mat-datepicker>
                 <mat-error *ngIf="taskForm.get('targetdate')!.hasError('required')"> Target Date is
@@ -58,8 +48,9 @@
             </div>
         </section>
     </form>
-    <div class="form-action-buttons">
-        <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
-    </div>
 </mat-card>
+
+<div class="form-action-buttons">
+    <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
+</div>
