--- a/src/app/taskmodule/project-list/add-project/add-project.component.html
+++ b/src/app/taskmodule/project-list/add-project/add-project.component.html
@@ -36,7 +36,7 @@
             </mat-form-field>
 
             <!-- Description -->
-            <mat-form-field appearance="outline" class="description-field">
+            <mat-form-field appearance="outline">
                 <mat-label>Description</mat-label>
                 <textarea maxlength="1024" rows="5" matInput formControlName="description"></textarea>
                 <mat-error *ngIf="projectForm.get('description')!.hasError('required')">Description
@@ -58,8 +58,8 @@
 
             <!-- Assigned Users -->
             <div *ngIf="projectForm.get('assignedto')" style="width: calc(100% - 24px);">
-                <ng-multiselect-dropdown [placeholder]="'Assigned To *'" [settings]="dropdownSettings"
-                    [data]="employeeData" [formControl]="assignedToControl">
+                <ng-multiselect-dropdown formControlName="assignedto" [placeholder]="'Assigned To *'" [settings]="dropdownSettings"
+                    [data]="employeeData">
                 </ng-multiselect-dropdown>
                 <mat-error
                     *ngIf="projectForm.get('assignedto')!.hasError('required') && projectForm.get('assignedto')!.touched">
