email extraction and email configuration changes

--- a/src/app/usit/components/email-configuration/add-email-configuration/add-email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/add-email-configuration/add-email-configuration.component.html
@@ -10,12 +10,12 @@
 <!-- mat-card starts -->
 <mat-card class="card">
     <!-- form- starts -->
-    <form [formGroup]="emailConfigurationForm" class="project-form">
+    <form [formGroup]="emailConfigurationForm" class="email-form">
         <section class="form-container">
             <!-- Email -->
             <mat-form-field appearance="outline" class="project-name-field">
                 <mat-label>Email</mat-label>
-                <input matInput formControlName="email" maxlength="64" />
+                <input matInput formControlName="email" maxlength="64" (change)="emailDuplicate($event)"/>
                 <mat-error *ngIf="emailConfigurationForm.get('email')!.hasError('required')">Email
                     is Required
                 </mat-error>
@@ -24,7 +24,7 @@
             </mat-form-field>
 
             <!-- Password -->
-            <mat-form-field appearance="outline" class="description-field">
+            <mat-form-field appearance="outline">
                 <mat-label>Password</mat-label>
                 <input maxlength="1024" matInput formControlName="password">
                 <mat-error *ngIf="emailConfigurationForm.get('password')!.hasError('required')">Password
@@ -32,7 +32,7 @@
             </mat-form-field>
 
             <!-- Technology -->
-            <mat-form-field appearance="outline" class="description-field">
+            <mat-form-field appearance="outline">
                 <mat-label>Technology</mat-label>
                 <input maxlength="1024" matInput formControlName="technology">
                 <mat-error *ngIf="emailConfigurationForm.get('technology')!.hasError('required')">Technology
@@ -41,10 +41,10 @@
         </section>
     </form>
     <!-- form-ends -->
-    <!-- form-bottom action buttons -->
-    <div class="form-action-buttons">
-        <button mat-raised-button class="btn-cancel" color="white" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
-    </div>
 </mat-card>
 <!-- mat-card-ends -->
+ <!-- form-bottom action buttons -->
+ <div class="form-action-buttons">
+    <button mat-raised-button class="btn-cancel" color="white" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
+</div>
