--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -43,11 +43,11 @@
                 </ng-container>
     
                 <!-- SNo Column -->
-                <!-- <ng-container matColumnDef="SerialNum">
+                <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef style=" width: 1% ">
                         S.No </th>
                     <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
-                </ng-container> -->
+                </ng-container>
     
                 <!-- To Column -->
                 <ng-container matColumnDef="To">
@@ -56,7 +56,7 @@
                     </th>
                     <td mat-cell *matCellDef="let element">
                       <span [ngClass]="element?.tomails_displayedEmail ? 'consultant-name' : 'bold-class'">
-                        {{ element?.tomails_displayedEmail || '-' }}
+                        {{ element?.tomails_displayedEmail ?? '-' }}
                         <span *ngIf="element?.tomails_remainingEmailsCount > 0" [matMenuTriggerFor]="tomailsMenu" class="email-count">
                           +{{ element?.tomails_remainingEmailsCount }}
                         </span>
@@ -75,7 +75,7 @@
                         From
                     </th>
                     <td mat-cell *matCellDef="let element">
-                        <span class="consultant-name">{{ element?.sender }}</span>
+                        <span class="consultant-name">{{ element?.sender ?? '-' }}</span>
                         <!-- <span [ngClass]="element?.sender_displayedEmail ? 'consultant-name' : 'bold-class'">
                             {{ element?.sender_displayedEmail || '-' }}
                             <span *ngIf="element?.sender_remainingEmailsCount > 0" [matMenuTriggerFor]="sendermailsMenu" class="email-count">
@@ -97,7 +97,7 @@
                     </th>
                     <td mat-cell *matCellDef="let element">
                         <span [ngClass]="element?.ccmails_displayedEmail ? 'consultant-name' : 'bold-class'">
-                            {{ element?.ccmails_displayedEmail || '-' }}
+                            {{ element?.ccmails_displayedEmail ?? '-' }}
                             <span *ngIf="element?.ccmails_remainingEmailsCount > 0" [matMenuTriggerFor]="ccmailsMenu" class="email-count">
                                 +{{ element?.ccmails_remainingEmailsCount }}
                             </span>
@@ -115,7 +115,6 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject">
                         Subject</th>
                     <td mat-cell *matCellDef="let element">
-                        <!-- {{element?.subject | titlecase}} -->
                         <span class="subject-text"
                         [matTooltip]="element?.subject | titlecase"
                         matTooltipPosition="above">
@@ -130,7 +129,7 @@
                         style=" width: 10% !important;" nowrap>
                         Received Date </th>
                     <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
-                        {{element?.receiveddate}}</td>
+                        {{element?.receiveddate ?? '-'}}</td>
                 </ng-container>
 
                 <!-- Body Column-->
@@ -142,6 +141,7 @@
                         <mat-icon>visibility</mat-icon>
                     </td>
                 </ng-container>
+
                 <!-- Action Column-->
                 <!-- <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef style="width: 5%"> Action </th>
